# space-game

./: .gitignore  Background.cpp  Background.h  BasicShipModel.cpp  BasicShipModel.h  CMakeLists.txt  CelestialBodyDefinition.h  CollisionHandler.h  Config.cpp  DataBus.h  Display.cpp  Display.h  EffectsManager.cpp  EffectsManager.h  Game.h  GamePlay.cpp  GamePlay.h  Input.h  Makefile  MapView.hpp  Menu.cpp  Menu.h  MenuItem.h  ObjectManager.cpp  Planet.cpp  Planet.h  PlanetStation.cpp  PlanetStation.h  ProceduralSystem.cpp  ProceduralSystem.h  README.md  RandomGenerator.hpp  SConstruct  SolarSystemFactory.h  SpaceShip.cpp  SpaceShip.h  StandardBusCommands.h  StarCategory.cpp  StarCategory.h  StarInfo.h  (+59 more)
devices/: generic_hud_device.h  hotas_device.h  ship_device.h
inc/: BasicShipModel.h  BusDataTypes.h  CelestialBodyDefinition.h  CollisionHandler.h  Config.h  ContactInterface.h  DataBus.h  DataBusConnection.h  Display.h  EffectsManager.h  EmptySystem.hpp  Font.h  Game.h  GamePlay.h  MapView.hpp  Menu.h  ObjectManager.h  Planet.h  PlanetStation.h  ProceduralSystem.h  ShipModelInterface.h  SolarSystemFactory.h  SolarSystemInterface.h  SpaceShip.h  StarInterface.h  StationInterface.h  StorableObject.h  TestingSystem.h  Text.h  Texture.h  UniverseManager.h
interfaces/: ShipModelInterface.h  SolarSystemInterface.h  StarInterface.h  StationInterface.h
src/: Background.cpp  BasicShipModel.cpp  CollisionHandler.cpp  Config.cpp  DataBus.cpp  DataBusConnection.cpp  Display.cpp  Font.cpp  Game.cpp  GameDefinitions.cpp  GamePlay.cpp  Menu.cpp  ObjectManager.cpp  Planet.cpp  PlanetStation.cpp  ProceduralSystem.cpp  SolarSystemFactory.cpp  SpaceShip.cpp  TestingSystem.cpp  Text.cpp  Texture.cpp  UniverseManager.cpp
systems/: basic_engine_system.h  basic_hull_system.h  basic_radar_system.h  engine_system_interface.h  generic_hud_device.h  hotas_device.h  hotas_system_interface.h  hud_system_interface.h  hull_system_interface.h  radar_system_interface.h  ship_system_interface.h  ship_systems_manager.h
systems/inc/: BasicEngineMk1.h  BasicEngineSystem.h  BasicHullSystem.h  (+15 more)
testing/: LandingGear.h  test-longint.cpp  test-ship.cpp
(+50 files in other folders)
